# src/controller/index.ts
@@ -4,18 +4,64 @@ import {
 	Route,
 	Tags
 } from "tsoa"
-import { ConversionService } from "../service/conversion"
 import { Inject } from "typescript-ioc"
-@Route("/")
-@Tags("Conversion-Formats")
-export class IndexController extends Controller {
+import {
+	ICodec,
+	IEncoder,
+	IFFmpegCapabilities,
+	IFilter,
+	IFormat,
+} from "~/service/ffmpeg/interface"
+import { CapabilityService } from "../service/capabilities"
+@Route("/capabilities")
+@Tags("Capabilities")
+export class CapabilityController extends Controller {
 	@Inject
-	private readonly conversionService!: ConversionService
+	private readonly capabilityService!: CapabilityService
 	/**
-	 * Returns a list of all possible formats to convert from and to.
+	 * Returns a list of capabilities and options that 
+	 * can be applied to an FFmpeg command.
+	 */
+	@Get("/")
+	public async getAvailableCapabilities(): Promise<IFFmpegCapabilities> {
+		return await this.capabilityService.getAllCapabilities()
+	}
+	/**
+	 * Returns all available filters that can be used for conversion.
+	 */
+	@Get("/filter")
+	public async getAvailableFilter(): Promise<IFilter[]> {
+		return await this.capabilityService.getAvailableFilters()
+	}
+	/**
+	 * Returns all available formats that can be converted with FFmpeg.
 	 */
 	@Get("/formats")
-	public async getSupportedFormats(): Promise<void> {
-		// Return await conversionService.getSupportedFormats()
+	public async getAvailableFormats(): Promise<IFormat[]> {
+		return await this.capabilityService.getAvailableFormats()
+	}
+	
+	@Get("/codecs")
+	public async getAvailableCodecs(): Promise<ICodec[]> {
+		return await this.capabilityService.getAvailableCodecs()
+		// catch (error) {
+		// 	return {
+		// 		message: error.message,
+		// 		status: error.code
+		// 	}
+		// }
+	}
+	/**
+	 * Returns all available encoders FFmpeg is able to use.
+	 */
+	@Get("/encoders")
+	public async getAvailableEncoders(): Promise<IEncoder[]> {
+		return await this.capabilityService.getAvailableEncoders()
+		// catch (error) {
+		// 	return {
+		// 		message: error.message,
+		// 		status: error.code
+		// 	}
+		// }
 	}
 }
